--- a/src/app/modules/dashboard/evp-credit-dashboard/evp-credit-dashboard.component.html
+++ b/src/app/modules/dashboard/evp-credit-dashboard/evp-credit-dashboard.component.html
@@ -46,6 +46,8 @@
                                 [title]="chartOptions1?.title"
                                 [theme]="chartOptions1?.theme"
                                 [responsive]="chartOptions1?.responsive"
+                                [noData]="chartOptions1.noData"
+
                             ></apx-chart>
                         </div>
                     </div>
@@ -61,6 +63,8 @@
                                 [title]="chartOptions2?.title"
                                 [theme]="chartOptions2?.theme"
                                 [responsive]="chartOptions2?.responsive"
+                                [noData]="chartOptions2.noData"
+
                             ></apx-chart>
                         </div>
                     </div>
@@ -76,6 +80,8 @@
                                 [title]="chartOptions3?.title"
                                 [theme]="chartOptions3?.theme"
                                 [responsive]="chartOptions3?.responsive"
+                                [noData]="chartOptions3.noData"
+
                             ></apx-chart>
                         </div>
                     </div>
@@ -91,6 +97,8 @@
                                 [title]="chartOptions4?.title"
                                 [theme]="chartOptions4?.theme"
                                 [responsive]="chartOptions4?.responsive"
+                                [noData]="chartOptions4.noData"
+
                             ></apx-chart>
                         </div>
                     </div>
