--- a/src/app/modules/dashboard/evp-od-dashboard/evp-od-dashboard.component.html
+++ b/src/app/modules/dashboard/evp-od-dashboard/evp-od-dashboard.component.html
@@ -43,7 +43,10 @@
                             <apx-chart [series]="chartOptions?.series" [chart]="chartOptions?.chart"
                                        [labels]="chartOptions?.labels" [title]="chartOptions?.title"
                                        [theme]="chartOptions?.theme"
-                                       [responsive]="chartOptions?.responsive"></apx-chart>
+                                       [responsive]="chartOptions?.responsive"
+                                       [noData]="chartOptions.noData"
+
+                            ></apx-chart>
                         </div>
                     </div>
 
