--- a/src/app/modules/dashboard/mco-dashborad/mco-dashborad.component.html
+++ b/src/app/modules/dashboard/mco-dashborad/mco-dashborad.component.html
@@ -43,6 +43,7 @@
                             [labels]="chartOptions1?.labels"
                             [theme]="chartOptions1?.theme"
                             [responsive]="chartOptions1?.responsive"
+                            [noData]="chartOptions1.noData"
                         ></apx-chart>
                     </div>
                 </div>
@@ -58,6 +59,8 @@
                             [labels]="chartOptions2?.labels"
                             [theme]="chartOptions2?.theme"
                             [responsive]="chartOptions2?.responsive"
+                            [noData]="chartOptions2.noData"
+
                         ></apx-chart>
                     </div>
                 </div>
@@ -76,6 +79,8 @@
                             [labels]="chartOptions3?.labels"
                             [theme]="chartOptions3?.theme"
                             [responsive]="chartOptions3?.responsive"
+                            [noData]="chartOptions3.noData"
+
                         ></apx-chart>
                     </div>
                 </div>
