--- a/src/app/modules/dashboard/president-ztbl/president-ztbl.component.html
+++ b/src/app/modules/dashboard/president-ztbl/president-ztbl.component.html
@@ -48,6 +48,8 @@
                                 [title]="chartOptions1.title"
                                 [theme]="chartOptions1.theme"
                                 [responsive]="chartOptions1.responsive"
+                                [noData]="chartOptions1.noData"
+
                             ></apx-chart>
                         </div>
                     </div>
@@ -64,6 +66,8 @@
                                 [title]="chartOptions2.title"
                                 [theme]="chartOptions2.theme"
                                 [responsive]="chartOptions2.responsive"
+                                [noData]="chartOptions2.noData"
+
                             ></apx-chart>
                         </div>
                     </div>
@@ -79,6 +83,8 @@
                                 [title]="chartOptions3.title"
                                 [theme]="chartOptions3.theme"
                                 [responsive]="chartOptions3.responsive"
+                                [noData]="chartOptions3.noData"
+
                             ></apx-chart>
                         </div>
                     </div>
@@ -94,6 +100,8 @@
                                 [title]="chartOptions4.title"
                                 [theme]="chartOptions4.theme"
                                 [responsive]="chartOptions4.responsive"
+                                [noData]="chartOptions4.noData"
+
                             ></apx-chart>
                         </div>
                     </div>
