--- a/src/app/modules/dashboard/recovery-sam-division/recovery-sam-division.component.html
+++ b/src/app/modules/dashboard/recovery-sam-division/recovery-sam-division.component.html
@@ -39,20 +39,24 @@
         <div class="row pb-4">
             <div class="col-lg-6">
                 <div class=" border">
-                    <div id="chart" *ngIf="chartOptions1" class=" mt-0 py-3 shadow-sm border">
+                    <div id="chart2" *ngIf="chartOptions1" class=" mt-0 py-3 shadow-sm border">
                         <apx-chart [series]="chartOptions1?.series" [chart]="chartOptions1?.chart"
                                    [labels]="chartOptions1?.labels" [title]="chartOptions1?.title"
-                                   [theme]="chartOptions1?.theme" [responsive]="chartOptions1?.responsive"></apx-chart>
+                                   [theme]="chartOptions1?.theme" [responsive]="chartOptions1?.responsive"
+                                   [noData]="chartOptions1.noData"
+                        ></apx-chart>
                     </div>
                 </div>
 
             </div>
             <div class="col-lg-6">
                 <div class=" border">
-                    <div id="chart" *ngIf="chartOptions2" class=" mt-0 py-3 shadow-sm border">
+                    <div id="chart3" *ngIf="chartOptions2" class=" mt-0 py-3 shadow-sm border">
                         <apx-chart [series]="chartOptions2?.series" [chart]="chartOptions2?.chart"
                                    [labels]="chartOptions2?.labels" [title]="chartOptions2?.title"
-                                   [theme]="chartOptions2?.theme" [responsive]="chartOptions2?.responsive"></apx-chart>
+                                   [theme]="chartOptions2?.theme" [responsive]="chartOptions2?.responsive"
+                                   [noData]="chartOptions2.noData"
+                        ></apx-chart>
                     </div>
                 </div>
 
