--- a/src/app/modules/dashboard/regional-cheif/regional-cheif.component.html
+++ b/src/app/modules/dashboard/regional-cheif/regional-cheif.component.html
@@ -48,6 +48,8 @@
                                 [title]="chartOptions.title"
                                 [theme]="chartOptions.theme"
                                 [responsive]="chartOptions.responsive"
+                                [noData]="chartOptions.noData"
+
                             ></apx-chart>
                         </div>
                     </div>
