--- a/src/app/modules/tour-dairy/set-target/set-target.component.html
+++ b/src/app/modules/tour-dairy/set-target/set-target.component.html
@@ -1,4 +1,6 @@
 <div
+    class="  sm:inset-0 flex flex-col flex-auto min-w-0 sm:overflow-auto bg-card dark:bg-transparent">
+    <div
     class="sm:inset-0 flex flex-col flex-auto min-w-0 overflow-x-hidden overflow-y-auto bg-card dark:bg-transparent">
     <div [hidden]="isChild" class="heading">Set Target
     </div>
@@ -185,13 +187,14 @@
 </div>
 
 </div>
+</div>
 
 <!--            For ZC Only (Exceptional Case)-->
-<ng-container  *ngIf="Multiple?.length>0">
-    <ng-container *ngFor="let m of Multiple;let i = index">
-        <ng-container  *ngIf="i>0">
-            <app-set-target [dateDuration]="dateDuration" [multiple]="true" [UserID]="UserID" [TargetData]="m" ></app-set-target>
-        </ng-container>
-    </ng-container>
+<!--<ng-container  *ngIf="Multiple?.length>0">-->
+<!--    <ng-container *ngFor="let m of Multiple;let i = index">-->
+<!--        <ng-container  *ngIf="i>0">-->
+<!--            <app-set-target [dateDuration]="dateDuration" [multiple]="true" [UserID]="UserID" [TargetData]="m" ></app-set-target>-->
+<!--        </ng-container>-->
+<!--    </ng-container>-->
 
-</ng-container>
+<!--</ng-container>-->
