--- a/src/app/modules/dashboard/zonal-chief-dashboard/zonal-chief-dashboard.component.html
+++ b/src/app/modules/dashboard/zonal-chief-dashboard/zonal-chief-dashboard.component.html
@@ -36,7 +36,7 @@
         <div class="flex flex-auto overflow-x-hidden overflow-y-scroll" style="flex-direction: column;">
             <div class="row">
                 <div class="col-lg-6">
-                    <div class="shadow-sm border">
+                    <div class="shadow-sm border"   style="height: calc(100vh - 340px);" >
                         <div id="chart" *ngIf="chartPerformanceIndicators" class=" mt-0 py-3">
                             <apx-chart [series]="chartPerformanceIndicators?.series"
                                        [chart]="chartPerformanceIndicators?.chart"
@@ -53,7 +53,7 @@
 
                 </div>
                 <div class="col-lg-6">
-                    <div class="shadow-sm border">
+                    <div class="shadow-sm border"   style="height: calc(100vh - 340px);" >
                         <div id="chart" *ngIf="chartLoanPortfolio" class=" mt-0 py-3">
                             <apx-chart [series]="chartLoanPortfolio?.series" [chart]="chartLoanPortfolio?.chart"
                                        [labels]="chartLoanPortfolio?.labels" [title]="chartLoanPortfolio?.title"
@@ -69,8 +69,8 @@
 
             </div>
             <div class="row">
-                <div class="col-lg-6 mt-3">
-                    <div class="shadow-sm border">
+                <div class="col-lg-6 py-3">
+                    <div class="shadow-sm border"   style="height: calc(100vh - 340px);" >
                         <div id="chart" *ngIf="chartnoOfBorrowers" class=" mt-0 py-3">
                             <apx-chart [series]="chartnoOfBorrowers?.series" [chart]="chartnoOfBorrowers?.chart"
                                        [labels]="chartnoOfBorrowers?.labels" [title]="chartnoOfBorrowers?.title"
@@ -83,8 +83,8 @@
                     </div>
                 </div>
                 <div class="col-lg-6 py-3">
-                    <div class="shadow-sm border pt-2" *ngIf="CreditCeiling">
-                        <p class=" ml-3" style="font-size: 14px; font-weight: 900;">Credit Ceiling</p>
+                    <div class="shadow-sm border pt-2" *ngIf="CreditCeiling"    style="height: calc(100vh - 340px);" >
+                        <p class=" ml-3 mb-5" style="font-size: 14px; font-weight: 900;">Credit Ceiling</p>
                         <app-pyramid-chart [item]="CreditCeiling">
                         </app-pyramid-chart>
 
