--- a/src/app/modules/dashboard/evp-od-dashboard/evp-od-dashboard.component.html
+++ b/src/app/modules/dashboard/evp-od-dashboard/evp-od-dashboard.component.html
@@ -37,9 +37,9 @@
         <!-- Products list -->
         <div class=" overflow-x-hidden overflow-y-scroll">
             <div class="row pb-4">
-                <div class="col-lg-12">
-                    <div class="shadow-sm border">
-                        <div id="chart" *ngIf="chartOptions" class=" mt-0 py-3 shadow-sm border">
+                <div class="col-lg-6 mb-3">
+                    <div class="shadow-sm border"     style="height: calc(100vh - 340px);" >
+                        <div id="chart" *ngIf="chartOptions" class=" mt-0 py-3">
                             <apx-chart [series]="chartOptions?.series" [chart]="chartOptions?.chart"
                                        [labels]="chartOptions?.labels" [title]="chartOptions?.title"
                                        [theme]="chartOptions?.theme"
