--- a/src/app/modules/tour-dairy/tour-diary-bm/tour-diary-bm.component.html
+++ b/src/app/modules/tour-dairy/tour-diary-bm/tour-diary-bm.component.html
@@ -3,7 +3,7 @@
 
     <div class="row pt-3">
         <div class="col-lg-9 col-sm-12">
-            <div class="heading">TOUR DIARY & PROGRESS REPORT OF ZONAL CHIEF</div>
+            <div class="heading">TOUR DIARY & PROGRESS REPORT OF BRANCH MANAGER</div>
         </div>
         <div class="col-lg-3 col-sm-12 self-center">
 
@@ -69,19 +69,18 @@
                                         <th rowspan="2">Date</th>
                                         <th colspan="2">Departure from</th>
                                         <th colspan="2">Arrival at</th>
-                                        <th rowspan="2">General Administration/Ambiance & Public Complaints of the Branch Visited</th>
-                                        <th rowspan="2">Cash Management & Compliance of Bank Instructions/SBP directives on FTC/AML/KYC etc by the Branch visited</th>
-                                        <th colspan="3">Audit Reports/Audit Discussions and Compliance Status of Branch Visited
-                                        </th>
+                                        <th colspan="2">Disbursements</th>
+                                        <th colspan="2">Recovery</th>
                                     </tr>
                                     <tr class="table-header-background text-center">
                                         <th>Place</th>
                                         <th>Time</th>
                                         <th>Place</th>
                                         <th>Time</th>
-                                        <th>Audit Reports</th>
-                                        <th>Outstanding Paras</th>
-                                        <th>Settlement</th>
+                                        <th>No. of new borrowers contacted </th>
+                                        <th>No. of borrowers of Roll-over cases contacted</th>
+                                        <th>No. of Defaulters contacted</th>
+                                        <th>Amount recovered with L.C. No.</th>
                                     </tr>
                                     </thead>
                                     <tbody>
@@ -140,40 +139,27 @@
                                                 <input matInput>
                                             </mat-form-field>
                                         </td>
-                                        <td>
-                                            <mat-form-field class=" mat-form-field-fluid w-full"
-                                                            appearance="outline">
-                                                <input matInput>
-                                            </mat-form-field>
-                                        </td>
                                     </tr>
+
                                     </tbody>
                                 </table>
+
                             </div>
 
                             <div class="col-lg-12 mt-2">
                                 <table class="table table-striped">
                                     <thead>
                                     <tr class="table-header-background text-center">
-                                        <th rowspan="3">No. of loan cases in which Recovery Schedule/Revised Recovery Schedules have not
-                                            been issued to borrowers
-                                        </th>
+                                        <th rowspan="2">No. of utilizations checked as per quota</th>
                                         <th colspan="2">
                                             Transfer of Technology
                                         </th>
-                                        <th colspan="6">Portfolio of the Branch Visited</th>
-                                        <th rowspan="3">Any other work done</th>
-                                        <th rowspan="3">Remarks</th>
+                                        <th rowspan="2">Any other work done</th>
+                                        <th rowspan="2">Remarks</th>
                                     </tr>
                                     <tr class="table-header-background text-center">
                                         <th>Progressive Farmers contacted</th>
-                                        <th>Progressive Farmers contacted</th>
-                                        <th>No.</th>
-                                        <th>Amt.</th>
-                                        <th>No.</th>
-                                        <th>Amt.</th>
-                                        <th>No.</th>
-                                        <th>Amt.</th>
+                                        <th>No. of farms visited</th>
                                     </tr>
                                     </thead>
                                     <tbody>
@@ -196,12 +182,6 @@
                                                 <input matInput>
                                             </mat-form-field>
                                         </td>
-                                        <td></td>
-                                        <td></td>
-                                        <td></td>
-                                        <td></td>
-                                        <td></td>
-                                        <td></td>
                                         <td>
                                             <mat-form-field class=" mat-form-field-fluid w-full"
                                                             appearance="outline">
