--- a/src/app/modules/tour-dairy/tour-diary-rc/tour-diary-rc.component.html
+++ b/src/app/modules/tour-dairy/tour-diary-rc/tour-diary-rc.component.html
@@ -3,7 +3,7 @@
 
     <div class="row pt-3">
         <div class="col-lg-9 col-sm-12">
-            <div class="heading">TOUR DIARY & PROGRESS REPORT OF ZONAL CHIEF</div>
+            <div class="heading">TOUR DIARY & PROGRESS REPORT OF REGIONAL CHIEF</div>
         </div>
         <div class="col-lg-3 col-sm-12 self-center">
 
@@ -66,108 +66,26 @@
                                 <table class="table table-striped">
                                     <thead>
                                     <tr class="table-header-background text-center">
-                                        <th rowspan="2">Date</th>
-                                        <th colspan="2">Departure from</th>
-                                        <th colspan="2">Arrival at</th>
-                                        <th rowspan="2">General Administration/Ambiance & Public Complaints of the Branch Visited</th>
-                                        <th rowspan="2">Cash Management & Compliance of Bank Instructions/SBP directives on FTC/AML/KYC etc by the Branch visited</th>
-                                        <th colspan="3">Audit Reports/Audit Discussions and Compliance Status of Branch Visited
+                                        <th rowspan="3">Date</th>
+                                        <th colspan="2" rowspan="2">Departure from</th>
+                                        <th colspan="2" rowspan="2">Arrival at</th>
+                                        <th colspan="6">Portfolio of the Province/Zone/Branch/Circle (Can See Portfolio For Both)</th>
+                                        <th rowspan="3">No. of defaulters contacted </th>
+                                        <th rowspan="3">Results of contacts so made
                                         </th>
                                     </tr>
+
+                                    <tr class="table-header-background text-center">
+                                        <th colspan="2">General</th>
+                                        <th colspan="2">NPLs</th>
+                                        <th colspan="2">SAM</th>
+                                    </tr>
+
                                     <tr class="table-header-background text-center">
                                         <th>Place</th>
                                         <th>Time</th>
                                         <th>Place</th>
                                         <th>Time</th>
-                                        <th>Audit Reports</th>
-                                        <th>Outstanding Paras</th>
-                                        <th>Settlement</th>
-                                    </tr>
-                                    </thead>
-                                    <tbody>
-                                    <tr>
-                                        <td>
-                                            <mat-form-field class=" mat-form-field-fluid w-full"
-                                                            appearance="outline">
-                                                <input matInput>
-                                            </mat-form-field>
-                                        </td>
-                                        <td>
-                                            <mat-form-field class=" mat-form-field-fluid w-full"
-                                                            appearance="outline">
-                                                <input matInput>
-                                            </mat-form-field>
-                                        </td>
-                                        <td>
-                                            <mat-form-field class=" mat-form-field-fluid w-full"
-                                                            appearance="outline">
-                                                <input matInput>
-                                            </mat-form-field>
-                                        </td>
-                                        <td>
-                                            <mat-form-field class=" mat-form-field-fluid w-full"
-                                                            appearance="outline">
-                                                <input matInput>
-                                            </mat-form-field>
-                                        </td>
-                                        <td>
-                                            <mat-form-field class=" mat-form-field-fluid w-full"
-                                                            appearance="outline">
-                                                <input matInput>
-                                            </mat-form-field>
-                                        </td>
-                                        <td>
-                                            <mat-form-field class=" mat-form-field-fluid w-full"
-                                                            appearance="outline">
-                                                <input matInput>
-                                            </mat-form-field>
-                                        </td>
-                                        <td>
-                                            <mat-form-field class=" mat-form-field-fluid w-full"
-                                                            appearance="outline">
-                                                <input matInput>
-                                            </mat-form-field>
-                                        </td>
-                                        <td>
-                                            <mat-form-field class=" mat-form-field-fluid w-full"
-                                                            appearance="outline">
-                                                <input matInput>
-                                            </mat-form-field>
-                                        </td>
-                                        <td>
-                                            <mat-form-field class=" mat-form-field-fluid w-full"
-                                                            appearance="outline">
-                                                <input matInput>
-                                            </mat-form-field>
-                                        </td>
-                                        <td>
-                                            <mat-form-field class=" mat-form-field-fluid w-full"
-                                                            appearance="outline">
-                                                <input matInput>
-                                            </mat-form-field>
-                                        </td>
-                                    </tr>
-                                    </tbody>
-                                </table>
-                            </div>
-
-                            <div class="col-lg-12 mt-2">
-                                <table class="table table-striped">
-                                    <thead>
-                                    <tr class="table-header-background text-center">
-                                        <th rowspan="3">No. of loan cases in which Recovery Schedule/Revised Recovery Schedules have not
-                                            been issued to borrowers
-                                        </th>
-                                        <th colspan="2">
-                                            Transfer of Technology
-                                        </th>
-                                        <th colspan="6">Portfolio of the Branch Visited</th>
-                                        <th rowspan="3">Any other work done</th>
-                                        <th rowspan="3">Remarks</th>
-                                    </tr>
-                                    <tr class="table-header-background text-center">
-                                        <th>Progressive Farmers contacted</th>
-                                        <th>Progressive Farmers contacted</th>
                                         <th>No.</th>
                                         <th>Amt.</th>
                                         <th>No.</th>
@@ -196,6 +114,18 @@
                                                 <input matInput>
                                             </mat-form-field>
                                         </td>
+                                        <td>
+                                            <mat-form-field class=" mat-form-field-fluid w-full"
+                                                            appearance="outline">
+                                                <input matInput>
+                                            </mat-form-field>
+                                        </td>
+                                        <td>
+                                            <mat-form-field class=" mat-form-field-fluid w-full"
+                                                            appearance="outline">
+                                                <input matInput>
+                                            </mat-form-field>
+                                        </td>
                                         <td></td>
                                         <td></td>
                                         <td></td>
@@ -215,38 +145,6 @@
                                             </mat-form-field>
                                         </td>
                                     </tr>
-
-                                    </tbody>
-                                </table>
-                            </div>
-
-                            <div class="col-lg-12 mt-2">
-                                <table class="table table-striped">
-                                    <thead>
-                                    <tr class="table-header-background text-center">
-                                        <th colspan="6">
-                                            Disbursement
-                                        </th>
-                                    </tr>
-                                    <tr class="table-header-background text-center">
-                                        <th>Annual Target</th>
-                                        <th>Proportionate Target up to the end of month under report</th>
-                                        <th>Total disbursement up to the end of previous month </th>
-                                        <th>Disbursement during the month under report</th>
-                                        <th>Total disbursement up to the end of month under report</th>
-                                        <th>Increase/Deficit</th>
-                                    </tr>
-                                    </thead>
-                                    <tbody>
-                                    <tr>
-                                        <td></td>
-                                        <td></td>
-                                        <td></td>
-                                        <td></td>
-                                        <td></td>
-                                        <td></td>
-                                    </tr>
-
                                     </tbody>
                                 </table>
                             </div>
@@ -261,12 +159,13 @@
                                     <thead>
                                     <tr class="table-header-background text-center">
                                         <!-- UTILIZATIONS -->
-                                        <th colspan="3">Amount in default up to the month under report (TARGET)</th>
+                                        <th colspan="3">Annual Target/Recoverable of Province/Zone/Branch/Circle</th>
                                         <th colspan="3">Recovery during the month under report</th>
                                         <th colspan="3">Balance Recoverable</th>
                                         <th colspan="3">Recovery during corresponding period</th>
                                         <th rowspan="2">Increase/Deficit</th>
-                                        <th colspan="2">Reschedulement/Restructuring/Write-off/Remission cases of the branch visited</th>
+                                        <th rowspan="2">Measures/Efforts for boosting up recovery</th>
+                                        <th rowspan="2">Remarks</th>
                                     </tr>
                                     <tr class="table-header-background text-center">
                                         <th>P.D.</th>
@@ -281,8 +180,6 @@
                                         <th>P.D.</th>
                                         <th>C.D.</th>
                                         <th>Total</th>
-                                        <th>Activity</th>
-                                        <th>No.</th>
                                     </tr>
                                     </thead>
                                     <tbody>
@@ -301,43 +198,18 @@
                                         <td></td>
                                         <td></td>
                                         <td>
-                                            <ul>
-                                                <li>Reschedulement</li>
-                                                <li>Restructring of Installments</li>
-                                                <li>RightOff/remission</li>
-                                            </ul>
+                                            <mat-form-field class=" mat-form-field-fluid w-full"
+                                                            appearance="outline">
+                                                <input matInput>
+                                            </mat-form-field>
                                         </td>
-                                        <td></td>
+                                        <td>
+                                            <mat-form-field class=" mat-form-field-fluid w-full"
+                                                            appearance="outline">
+                                                <input matInput>
+                                            </mat-form-field>
+                                        </td>
                                     </tr>
-                                    </tbody>
-                                </table>
-                            </div>
-
-                            <div class="col-lg-12 mt-2">
-                                <table class="table table-striped">
-                                    <thead>
-                                    <tr class="table-header-background text-center">
-                                        <th colspan="5">
-                                            Deposits
-                                        </th>
-                                    </tr>
-                                    <tr class="table-header-background text-center">
-                                        <th>Annual Target</th>
-                                        <th>Proportionate Target</th>
-                                        <th>Achievement Percentage</th>
-                                        <th>Deposit Balance during corresponding period</th>
-                                        <th>Increase/Deficit</th>
-                                    </tr>
-                                    </thead>
-                                    <tbody>
-                                    <tr>
-                                        <td></td>
-                                        <td></td>
-                                        <td></td>
-                                        <td></td>
-                                        <td></td>
-                                    </tr>
-
                                     </tbody>
                                 </table>
                             </div>
