--- a/src/app/modules/tour-dairy/tour-dairy-mco/tour-dairy-mco.component.html
+++ b/src/app/modules/tour-dairy/tour-dairy-mco/tour-dairy-mco.component.html
@@ -7,14 +7,14 @@
         </div>
         <div class="col-lg-3 col-sm-12 self-center">
 
-            <p class="text-right">
-                <button class="mt-1  py-2 mat-focus-indicator mat-flat-button mat-button-base mat-primary" type="button"
-                        color="primary"
-                        aria-expanded="false" aria-controls="collapseExample" onclick="toggleCollapse()">
-                    <mat-icon class="mr-2" id='arrow'>keyboard_arrow_down</mat-icon>
-                    Advance Filter
-                </button>
-            </p>
+<!--            <p class="text-right">-->
+<!--                <button class="mt-1  py-2 mat-focus-indicator mat-flat-button mat-button-base mat-primary" type="button"-->
+<!--                        color="primary"-->
+<!--                        aria-expanded="false" aria-controls="collapseExample" onclick="toggleCollapse()">-->
+<!--                    <mat-icon class="mr-2" id='arrow'>keyboard_arrow_down</mat-icon>-->
+<!--                    Advance Filter-->
+<!--                </button>-->
+<!--            </p>-->
 
         </div>
     </div>
@@ -22,7 +22,6 @@
 
     <div id="Kt-portlet-margin-top">
         <div class="collapse show" id="collapseExample">
-            <div class="card card-body">
                 <form [formGroup]="gridForm" class="kt-form kt-form--group-seperator-dashed">
 
                     <div class="kt-form">
@@ -69,7 +68,6 @@
 
 
                 </form>
-            </div>
         </div>
 
 
