--- a/src/app/modules/tour-dairy/view-target/view-target.component.html
+++ b/src/app/modules/tour-dairy/view-target/view-target.component.html
@@ -1,13 +1,13 @@
-
-<div class=" px-10 pt-3 sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 sm:overflow-hidden bg-card dark:bg-transparent">
+<div
+    class=" px-10 pt-3 sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 sm:overflow-hidden bg-card dark:bg-transparent">
     <div class="heading">View Target</div>
     <!-- Header -->
     <!-- Main -->
 
-        <!-- Products list -->
-        <div class="flex flex-auto" style="flex-direction: column;">
+    <!-- Products list -->
+    <div class="flex flex-auto" style="flex-direction: column;">
 
-            <!-- <table mat-table [dataSource]="dataSource" multiTemplateDataRows class="mat-elevation-z8">
+        <!-- <table mat-table [dataSource]="dataSource" multiTemplateDataRows class="mat-elevation-z8">
                 <ng-container matColumnDef="{{column}}" *ngFor="let column of columnsToDisplay">
                     <th mat-header-cell *matHeaderCellDef> {{column}} </th>
                     <td mat-cell *matCellDef="let element"> {{element[column]}} </td>
@@ -44,79 +44,97 @@
             </table> -->
 
 
-            <div class="container  px-0 pt-2">
-                <div class="table-responsive  border shadow-xs rounded-sm bg-gray-50" id="map_canvas">
-                    <table class="table accordion table-striped" >
-                        <thead>
-                            <tr class="table-header-background">
-                                <th scope="col"></th>
-                                <th scope="col">Heading 1</th>
-                                <th scope="col">Heading 2</th>
-                                <th scope="col">Heading 3</th>
-                                <th scope="col">Heading 4</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr data-bs-toggle="collapse" data-bs-target="#r1">
-                                <th scope="row"><mat-icon class="text-green">expand_more</mat-icon></th>
-                                <td>Cell</td>
-                                <td>Cell</td>
-                                <td>Cell</td>
-                                <td>Cell</td>
-                            </tr>
-                            <tr class="collapse accordion-collapse" id="r1" data-bs-parent=".table">
-                                <td colspan="5"> Item 1 detail .. This is the first item's accordion body. It is shown by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the .accordion-body, though the transition does limit overflow. </td>
-                            </tr>
-                            <tr data-bs-toggle="collapse" data-bs-target="#r2">
-                                <th scope="row"><mat-icon class="text-green">expand_more</mat-icon></th>
-                                <td>Cell</td>
-                                <td>Cell</td>
-                                <td>Cell</td>
-                                <td>Cell</td>
-                            </tr>
-                            <tr class="collapse accordion-collapse" id="r2" data-bs-parent=".table">
-                                <td colspan="5"> Item 2 detail .. This is the first item's accordion body. It is shown by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the .accordion-body, though the transition does limit overflow. </td>
-                            </tr>
-                            <tr data-bs-toggle="collapse" data-bs-target="#r3">
-                                <th scope="row"><mat-icon class="text-green">expand_more</mat-icon></th>
-                                <td>Cell</td>
-                                <td>Cell</td>
-                                <td>Cell</td>
-                                <td>Cell</td>
-                            </tr>
-                            <tr class="collapse accordion-collapse" id="r3" data-bs-parent=".table">
-                                <td colspan="5">                     <div class="table-responsive" style="overflow-x: hidden;">
+        <div class="container  px-0 pt-2">
+            <div class="table-responsive  border shadow-xs rounded-sm bg-gray-50" id="map_canvas">
+                <table class="table accordion table-striped">
+                    <thead>
+                        <tr class="table-header-background">
+                            <th scope="col"></th>
+                            <th scope="col">Heading 1</th>
+                            <th scope="col">Heading 2</th>
+                            <th scope="col">Heading 3</th>
+                            <th scope="col">Heading 4</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr data-bs-toggle="collapse" data-bs-target="#r1">
+                            <th scope="row">
+                                <mat-icon class="text-green">expand_more</mat-icon>
+                            </th>
+                            <td>Cell</td>
+                            <td>Cell</td>
+                            <td>Cell</td>
+                            <td>Cell</td>
+                        </tr>
+                        <tr class="collapse accordion-collapse" id="r1" data-bs-parent=".table">
+                            <td colspan="5"> Item 1 detail .. This is the first item's accordion body. It is shown by
+                                default, until the collapse plugin adds the appropriate classes that we use to style
+                                each element. These classes control the overall appearance, as well as the showing and
+                                hiding via CSS transitions. You can modify any of this with custom CSS or overriding our
+                                default variables. It's also worth noting that just about any HTML can go within the
+                                .accordion-body, though the transition does limit overflow. </td>
+                        </tr>
+                        <tr data-bs-toggle="collapse" data-bs-target="#r2">
+                            <th scope="row">
+                                <mat-icon class="text-green">expand_more</mat-icon>
+                            </th>
+                            <td>Cell</td>
+                            <td>Cell</td>
+                            <td>Cell</td>
+                            <td>Cell</td>
+                        </tr>
+                        <tr class="collapse accordion-collapse" id="r2" data-bs-parent=".table">
+                            <td colspan="5"> Item 2 detail .. This is the first item's accordion body. It is shown by
+                                default, until the collapse plugin adds the appropriate classes that we use to style
+                                each element. These classes control the overall appearance, as well as the showing and
+                                hiding via CSS transitions. You can modify any of this with custom CSS or overriding our
+                                default variables. It's also worth noting that just about any HTML can go within the
+                                .accordion-body, though the transition does limit overflow. </td>
+                        </tr>
+                        <tr data-bs-toggle="collapse" data-bs-target="#r3">
+                            <th scope="row">
+                                <mat-icon class="text-green">expand_more</mat-icon>
+                            </th>
+                            <td>Cell</td>
+                            <td>Cell</td>
+                            <td>Cell</td>
+                            <td>Cell</td>
+                        </tr>
+                        <tr class="collapse accordion-collapse" id="r3" data-bs-parent=".table">
+                            <td colspan="5">
+                                <div class="table-responsive" style="overflow-x: hidden;">
                                     <table class="table table-striped">
                                         <thead>
-                                        <tr class="table-header-background">
-                                            <th>CNIC</th>
-                                            <th>Name</th>
-                                            <th>Father Name</th>
-                                            <th>DOB</th>
-                                        </tr>
+                                            <tr class="table-header-background">
+                                                <th>CNIC</th>
+                                                <th>Name</th>
+                                                <th>Father Name</th>
+                                                <th>DOB</th>
+                                            </tr>
                                         </thead>
                                         <tbody>
-                                        <tr>
-                                            <td>{{customerRec.Cnic</td>
-                                            <td>{{customerRec.CustomerNam</td>
-                                            <td>{{customerRec.FatherName</td>
-                                            <td>{{customerRec.Dob</td>
-                                        </tr>
+                                            <tr>
+                                                <td>{{customerRec.Cnic</td>
+                                                <td>{{customerRec.CustomerNam</td>
+                                                <td>{{customerRec.FatherName</td>
+                                                <td>{{customerRec.Dob</td>
+                                            </tr>
                                         </tbody>
                                     </table>
-            
-                                </div></td>
-                            </tr>
-                        </tbody>
-                    </table>
-                </div>
+
+                                </div>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
             </div>
-
-
-
-
         </div>
 
 
-    
+
+
+    </div>
+
+
+
 </div>
